# resume

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: action_tox.yml
docs/source/: conf.py  index.md
src/resume/: __init__.py  __main__.py
src/resume/_text/: __init__.py  abridged.py  career_overview.py  contact.py  education.py  summary.py  technical_proficiencies.py
tests/: test_resume.py
