[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "resume" # import resume

[project]
name = "luke-resume" #As in pip install luke-resume
authors = [{name = "Luke Garzia", email = "garzia.luke@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"] # description doc string of package
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['typer']


[project.urls]
Home = "https://github.com/lgarzia/resume"

[project.scripts]
luke     = "resume.__main__:main" #luke command will can the main() in __main__.py
resume = "resume.__main__:main"

